# BLDFM

./: .buildinfo  .gitignore  README.md  acknowledgments.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  quickstart.html  reference.html  runs.html  search.html  searchindex.js  src.html  tests.html  tutorial_full.html  tutorial_quickstart.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/bldfm/: cache.html  cli.html  config_parser.html  fft_manager.html  interface.html  io.html  pbl_model.html  solver.html  synthetic.html  utils.html
_modules/src/: pbl_model.html  solver.html  utils.html
_modules/tests/: test_cache.html  test_config.html  test_integration.html  test_interface.html  test_io.html  test_parallel.html  test_pbl_model.html  test_plotting.html  test_regression.html  test_solver.html  test_synthetic.html
_sources/: acknowledgments.rst.txt  index.rst.txt  overview.rst.txt  reference.rst.txt  runs.rst.txt  src.rst.txt  tests.rst.txt  tutorial_full.rst.txt  tutorial_quickstart.rst.txt
_static/: alabaster.css
bldfm/runs/: comparison_analytic.py  comparison_footprint.py  footprint_example.py  minimal_example.py
bldfm/src/: pbl_model.py  solver.py
blfdm/runs/: RS22.py  Rey-Sanchez_et_al_2022.py  Rey_Sanchez_et_al_2022.py  footprint_example.py  greens_func_example.py  minimal_example.py  (+1 more)
docs/: Makefile
examples/: 3d_plume.py  README.md  footprint_example.py  minimal_example.py  minimal_example_3d.py  multitower_example.py  parallel_example.py  timeseries_example.py  visualization_example.py
runs/: 3d_plume.py  RS22.py  analytic_convergence_test.py  analytic_numeric_convergence_test.py  comparison_analytic.py  comparison_footprint.py  comparison_footprint_neutral.py  comparison_footprint_stable.py  comparison_footprint_unstable.py  footprint_example.py  greens_func_example.py  minimal_example.py  minimal_example_3d.py  numeric_convergence_test.py  numeric_numeric_convergence_test.py  numerical_convergence_test.py  parallel_example.py  plot_profiles.py  point_measurement_example.py
src/: __init__.py  most.py  pbl_model.py  solver.py  utils.py
tests/: conftest.py  test_cache.py  test_config.py  test_ffm_kormann_meixner.py  test_integration.py  test_interface.py  test_io.py  test_memory.py  test_parallel.py  test_pbl_model.py  test_plotting.py  test_regression.py  test_solver.py  test_synthetic.py
(+93 files in other folders)
