[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BLDFM"
version = "0.9.0"
description = "Boundary Layer Footprint Dispersion Model"
authors = [
    { name = "Mark Schlutow", email = "mschlutow@bgc-jena.mpg.de" },
    { name = "Ray Chew", email = "chew@caltech.edu" },
    { name = "Mathias Göckede", email = "mgoeck@bgc-jena.mpg.de" },

]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "numba",
]

[project.optional-dependencies]
dev = [
    "pytest",  # For testing
    "sphinx",  # For documentation
    "black",  # Optional: for code formatting
]

[tool.setuptools]
packages = ["src"]
